# unipi-one-modbus

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  unipi-one.yaml
configs/: 0-autocal.yaml  1-modbus.yaml  5-unipi-10.yaml  5-unipi-11.yaml  5-unipi-lite.yaml  6-emo-r8_1.yaml  6-emo-r8_2.yaml  6-emo-r8_3.yaml  6-emo-r8_4.yaml  6-emo-r8_5.yaml  6-emo-r8_6.yaml  6-emo-r8_7.yaml  unipi-one-with-pigpio.yaml
debian/: control  copyright  end_of_changelog  install  rules  unipi-one-modbus.postinst  unipi-one-modbus.service  unipi-one.postinst  unipi-one.service
doc/: Description.txt  EXT8Ro.yaml  _u1tcp.yaml  emo-r8_1.yaml  uni1tcp.yaml  unipi-10.yaml  unipi-11.yaml  unipi-lite.yaml  unipi-one-with-pigpio.yaml  virtuals.yaml
gitlab-ci/: build-before-script.sh
run.d/: 21-overlays-one.sh  50-configure-one.sh
unipi-one/: rpcmethods.py
unipi-one/modbus/: __init__.py  registers.py  server.py  slavemap.py
unipi-one/pigpioc/: aireg.py  bus.py  gpiochip.py  input.py  mcp230xx.py  mcp342x.py  pwmout.py  regcoils.py
unipi_one/: __init__.py  __main__.py  starter.py
unipi_one/gpiod/: gpiochip.py  gpionotify.py  regcoils.py
unipi_one/iio/: aireg.py  mcp342x.py  pwmout.py
unipi_one/modbus/: server.py  slavemap.py
unipi_one/pigpioc/: gpiochip.py
unipi_one_modbus/: __init__.py  starter.py
unipi_one_modbus/gpiod/: gpiochip.py  gpionotify.py  input.py
unipi_one_modbus/iio/: aireg.py  pwmout.py
unipi_one_modbus/modbus/: registers.py  server.py  slavemap.py
unipi_one_modbus/pigpioc/: aireg.py  bus.py  input.py  mcp230xx.py  mcp342x.py
unipi_one_modbus/virtuals/: __main__.py  directory.py
yaml/: 1-modbus.yaml  6-emo8_2.yaml  6-emo8_3.yaml  6-emo8_4.yaml
