[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unipi-one"
version = "0.1"
authors = [
  { name="Miroslav Ondra", email="ondra@unipi.technology" },
]
description = "Modbus server for Unipi 1.x/Lite devices"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'pymodbus == 3.5.4',
    'PyYAML == 6.0.1',
    'pigpio >= 1.78',
]

#[project.scripts]
#unipi-one = "unipi_one:main"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
